2002-04-07  Per Bothner  <per@bothner.com>

	* XPath.java:  Mark as deprecated.
	* XPathConstants.java:  Likewise.
	* XPathContext.java:  Likewise.
	* XPathParser.java:  Likewise.

2002-03-24  Per Bothner  <per@bothner.com>

	* QName.java.in (hashCode):  Allow localname to be null.

2002-03-02  Per Bothner  <per@bothner.com>

	* Makefile.am (SED_REFERENCES_SUBS): Moved to Make-rules.

2002-02-15  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST):  Leave out redundant $(java_sources).
	Add package.html.

2002-02-14  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (writeObject):  Check for gnu.text.Char.

2002-02-13  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java (emitEntityReference):  New method.

	* XMLPrinter.java (writeChar): Fix output of character references.
	(write):  If a char is >= 127, pass it to writeChar.

	* Makefile.am (java_sources):  Remove QName.java - it is in java_BUILT.

	* Makefile.am (DONT_EDIT_SUBS):  Moved to ../../Make-rules.

2002-02-11  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (writeChar):  Use character entity if non-ascii.

2002-02-05  Per Bothner  <per@bothner.com>

	* XMLParser.java.in (parse):  Handle space after attribute name.

2002-01-29  Per Bothner  <per@bothner.com>

	* NamespaceResolver.java (beginGroup):  Call closeStartTag.

	* XMLPrinter.java (escapeText):  Make public.
	(<init>):  New constructors.

2002-01-23  Per Bothner  <per@bothner.com>

	* XMLPrinter.java:  Re-write to inherit from PrintConsumer.

2002-01-21  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java (parse):  Use NamespaceResolver.
	Add calls to out.beginDocument/endDocument.

	* XMLPrinter.java (writeObject):  Check for UnescapedData.

2002-01-13  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (style):  New field.
	(make): Static method - takes a style parameter.

2002-01-07  Per Bothner  <per@bothner.com>

	* NamedChildrenFilter.java:  New class, extends FilterConsumer.